examples/neg/must_box_block_param.effekt
module must_box_block_param

def foo { block: (Int) => Unit } = block